--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/LogoTemaEscuro.svg" />
+        <link rel="icon" type="image/svg+xml" href="/LogoMA.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Miguel Alves</title>
     </head>
